# Computer-Language-Comparison

./: .gitattributes
ADA/main/: alire.toml
ADA/main/src/: main.adb
Agda/: FFI.hi  FFI.hs  main.agda  main.agdai
Agda/MAlonzo/: RTE.hi
Agda/MAlonzo/Code/: Qmain.hi  Qmain.hs
Agda/MAlonzo/Code/Agda/: Primitive.hi
Agda/MAlonzo/Code/Agda/Builtin/: Bool.hi  Float.hi  IO.hi  Int.hi  Maybe.hi  Nat.hi  String.hi  Unit.hi
Agda/MAlonzo/RTE/: Float.hi
Assembly/: link.ld  main.asm
C/: link.ld  main.c
C#/main/: RDTSCP.asm  link.ld  main.cs  main.csproj
C++/: link.ld  main.cpp
Haskell/: RDTSCP.asm  main.hi  main.hs
JavaScript/: FFI.asm  FFI.c  FFI.s  deno.json  link.ld  main.js  package-lock.json  package.json
Racket/: RDTSCP.asm  link.ld  main.rkt
Racket/compiled/: main_rkt.dep  main_rkt.zo
TypeScript/: CMakeLists.txt  FFI.asm  deno.json  main.ts  package-lock.json  package.json
